--- a/Tests/JasmineSpecRunner.html
+++ b/Tests/JasmineSpecRunner.html
@@ -10,7 +10,7 @@
         <script src="it_multiple.js" type="text/javascript"></script>
 
         <!-- include source files here... -->
-        <script src="TennisKata.js" type="text/javascript"></script>
+        <script src="../Scripts/TennisKata.js" type="text/javascript"></script>
 
         <!-- include spec files here... -->
         <script src="TennisKataSpec.js" type="text/javascript"></script>
