--- a/Tests/JasmineSpecRunner.html
+++ b/Tests/JasmineSpecRunner.html
@@ -10,7 +10,11 @@
         <script src="it_multiple.js" type="text/javascript"></script>
 
         <!-- include source files here... -->
-        <script src="../Scripts/TennisKata.js" type="text/javascript"></script>
+        <script src="../Scripts/Player.js" type="text/javascript"></script>
+        <script src="../Scripts/Game.js" type="text/javascript"></script>
+        <script src="../Scripts/Scoreboard.js" type="text/javascript"></script>
+        <script src="../Scripts/Controller.js" type="text/javascript"></script>
+        <script src="../Scripts/Factory.js" type="text/javascript"></script>
 
         <!-- include spec files here... -->
         <script src="TennisKataSpec.js" type="text/javascript"></script>
