Added font and some styling

--- a/TennisKata.html
+++ b/TennisKata.html
@@ -2,6 +2,7 @@
 
 	<head>
 		<title>Tennis Kata</title>
+		<link rel="stylesheet" type="text/css" href="css/TennisKata.css">
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.js"></script>
 		<script type="text/javascript" src="Scripts/Player.js"></script>
 		<script type="text/javascript" src="Scripts/Game.js"></script>
@@ -16,14 +17,14 @@
 		<button type="button" id="player1ScoresPointBtn">Player 1 scores a point</button>
 		<button type="button" id="player2ScoresPointBtn">Player 2 scores a point</button>
 
-		<table>
+		<table border="1">
 			<tr>
-				<td><span id="player1Name" /></td>
-				<td><span id="player1Score" /></td>
+				<td class="name"><span id="player1Name">&nbsp;</span></td>
+				<td class="score"><span id="player1Score">&nbsp;</span></td>
 			</tr>
 			<tr>
-				<td><span id="player2Name" /></td>
-				<td><span id="player2Score" /></td>
+				<td class="name"><span id="player2Name">&nbsp;</span></td>
+				<td class="score"><span id="player2Score">&nbsp;</span></td>
 			</tr>
 		</table>
 
