--- a/TennisKata.html
+++ b/TennisKata.html
@@ -2,7 +2,7 @@
 
 	<head>
 		<title>Tennis Kata</title>
-		<link rel="stylesheet" type="text/css" href="css/TennisKata.css">
+		<link rel="stylesheet" type="text/css" href="Styles/TennisKata.css">
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.js"></script>
 		<script type="text/javascript" src="Scripts/Player.js"></script>
 		<script type="text/javascript" src="Scripts/Game.js"></script>
