Added a couple of screenshots

--- a/TennisKata.html
+++ b/TennisKata.html
@@ -27,7 +27,7 @@
 		<button type="button" id="player1ScoresPointBtn">Player 1 scores a point</button>
 		<button type="button" id="player2ScoresPointBtn">Player 2 scores a point</button>
 
-		<table border="1">
+		<table>
 			<tr>
 				<td class="name"><span id="player1Name">&nbsp;</span></td>
 				<td class="score"><span id="player1Score">&nbsp;</span></td>
