--- a/Tests/JasmineSpecRunner.html
+++ b/Tests/JasmineSpecRunner.html
@@ -14,6 +14,7 @@
         <script src="../Scripts/Scoreboard.js" type="text/javascript"></script>
         <script src="../Scripts/Controller.js" type="text/javascript"></script>
         <script src="../Scripts/Factory.js" type="text/javascript"></script>
+        <script src="../Scripts/Scorecard.js" type="text/javascript"></script>
 
         <!-- include spec files here... -->
         <script src="TennisKataSpec.js" type="text/javascript"></script>
