--- a/TennisKata.html
+++ b/TennisKata.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="Styles/TennisKata.css">
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.js"></script>
 		<script type="text/javascript" src="Scripts/Player.js"></script>
-		<script type="text/javascript" src="Scripts/Game.js"></script>
+		<script type="text/javascript" src="Scripts/Scorecard.js"></script>
 		<script type="text/javascript" src="Scripts/Scoreboard.js"></script>
 		<script type="text/javascript" src="Scripts/Controller.js"></script>
 		<script type="text/javascript" src="Scripts/Factory.js"></script>
