--- a/TennisKata.html
+++ b/TennisKata.html
@@ -29,12 +29,18 @@
 
 		<table>
 			<tr>
-				<td class="name"><span id="player1Name">&nbsp;</span></td>
-				<td class="score"><span id="player1Score">&nbsp;</span></td>
+				<td class="name"><span id="player1Name"></span></td>
+                <td class="score sets"><span id="player1Sets"></span></td>
+                <td class="score games"><span id="player1Games"></span></td>
+				<td class="score points"><span id="player1Points"></span></td>
+                <td class="score forSizingOnly"><span>&nbsp;</span></td>
 			</tr>
 			<tr>
-				<td class="name"><span id="player2Name">&nbsp;</span></td>
-				<td class="score"><span id="player2Score">&nbsp;</span></td>
+				<td class="name"><span id="player2Name"></span></td>
+                <td class="score sets"><span id="player2Sets"></span></td>
+                <td class="score games"><span id="player2Games"></span></td>
+				<td class="score points"><span id="player2Points"></span></td>
+                <td class="score forSizingOnly"><span>&nbsp;</span></td>
 			</tr>
 		</table>
 
