Started work to implement match length.

--- a/TennisKata.html
+++ b/TennisKata.html
@@ -34,7 +34,7 @@
         <input id="matchLength5" type="radio" name="matchLengthRadioButtonGroup" value="5">
         <label for="matchLength5">5 sets</label>
         <br />
-        <button type="button" id="setBestOfBtn">Set match length</button>
+        <button type="button" id="setMatchLengthBtn">Set match length</button>
 
         <hr />
 
