Added more unit tests, changed how zero points/games/sets are displayed, right justified the display of points and games.

--- a/TennisKata.html
+++ b/TennisKata.html
@@ -25,7 +25,7 @@
         <hr />
 
         <p>Match length:</p>
-        <input id="matchLength1" type="radio" name="matchLengthRadioButtonGroup" value="1" checked="checked">
+        <input id="matchLength1" type="radio" name="matchLengthRadioButtonGroup" value="1">
         <label for="matchLength1">1 set</label>
         <br />
         <input id="matchLength3" type="radio" name="matchLengthRadioButtonGroup" value="3">
