We now indicate who the current server is (including tie-breaker logic)

--- a/TennisKata.html
+++ b/TennisKata.html
@@ -43,14 +43,20 @@
 
 		<table>
 			<tr>
-				<td class="name"><span id="player1Name"></span></td>
+				<td class="name">
+                    <span id="player1Name"></span>
+                    <img id="player1Serving" alt="tennis ball image to indicate this player is serving" src="Images/Tennis-Ball-icon.png" />
+                </td>
                 <td class="score sets"><span id="player1Sets"></span></td>
                 <td class="score games"><span id="player1Games"></span></td>
 				<td class="score points"><span id="player1Points"></span></td>
                 <td class="score forSizingOnly"><span>&nbsp;</span></td>
 			</tr>
 			<tr>
-				<td class="name"><span id="player2Name"></span></td>
+				<td class="name">
+                    <span id="player2Name"></span>
+                    <img id="player2Serving" alt="tennis ball image to indicate this player is serving" src="Images/Tennis-Ball-icon.png" />
+                </td>
                 <td class="score sets"><span id="player2Sets"></span></td>
                 <td class="score games"><span id="player2Games"></span></td>
 				<td class="score points"><span id="player2Points"></span></td>
