Started to add score summary. Also, got rid of Player's Id property.

--- a/Tests/JasmineSpecRunner.html
+++ b/Tests/JasmineSpecRunner.html
@@ -10,10 +10,11 @@
 
         <!-- include source files here... -->
         <script src="../Scripts/Player.js" type="text/javascript"></script>
+        <script src="../Scripts/Scorecard.js" type="text/javascript"></script>
         <script src="../Scripts/Scoreboard.js" type="text/javascript"></script>
+        <script src="../Scripts/ScoreSummary.js" type="text/javascript"></script>
         <script src="../Scripts/Controller.js" type="text/javascript"></script>
         <script src="../Scripts/Factory.js" type="text/javascript"></script>
-        <script src="../Scripts/Scorecard.js" type="text/javascript"></script>
 
         <!-- include spec files here... -->
         <script src="TennisKataSpec.js" type="text/javascript"></script>
