--- a/TennisKata.html
+++ b/TennisKata.html
@@ -7,6 +7,7 @@
 		<script type="text/javascript" src="Scripts/Player.js"></script>
 		<script type="text/javascript" src="Scripts/Scorecard.js"></script>
 		<script type="text/javascript" src="Scripts/Scoreboard.js"></script>
+		<script type="text/javascript" src="Scripts/ScoreSummary.js"></script>
 		<script type="text/javascript" src="Scripts/Controller.js"></script>
 		<script type="text/javascript" src="Scripts/Factory.js"></script>
 		<script type="text/javascript" src="Scripts/PresentationLayer.js"></script>
@@ -63,6 +64,12 @@
                 <td class="score forSizingOnly"><span>&nbsp;</span></td>
 			</tr>
 		</table>
+
+        <br />
+
+        <span>Score summary: </span><span id="scoreSummary"></span>
+
+        <br />
 
 		<button type="button" id="resetBtn">Reset</button>
 
