--- a/Tests/JasmineSpecRunner.html
+++ b/Tests/JasmineSpecRunner.html
@@ -13,6 +13,7 @@
         <script src="../Scripts/Scorecard.js" type="text/javascript"></script>
         <script src="../Scripts/Scoreboard.js" type="text/javascript"></script>
         <script src="../Scripts/ScoreSummary.js" type="text/javascript"></script>
+        <script src="../Scripts/ScoreSummaryFormatter.js" type="text/javascript"></script>
         <script src="../Scripts/Controller.js" type="text/javascript"></script>
         <script src="../Scripts/Factory.js" type="text/javascript"></script>
 
