More work re score summary (which player is shown first, etc.)

--- a/TennisKata.html
+++ b/TennisKata.html
@@ -68,9 +68,10 @@
 
         <br />
 
-        <span>Score summary: </span><span id="scoreSummary"></span>
-
-        <br />
+        <div id="scoreSummary" style="display: none">
+            <span>Score summary<span id="scoreSummaryWhoFirst"></span>: </span><span id="scoreSummaryValue"></span>
+            <br />
+        </div>
 
 		<button type="button" id="resetBtn">Reset</button>
 
