--- a/TennisKata.html
+++ b/TennisKata.html
@@ -44,26 +44,46 @@
 		<button type="button" id="player2ScoresPointBtn">Player 2 scores a point</button>
 
 		<table>
-			<tr>
-				<td class="name">
+            <thead>
+                <tr>
+                    <th colspan="4" class="heading">Previous Sets</th>
+                    <th class="heading">Players</th>
+                    <th class="heading">Sets</th>
+                    <th class="heading">Games</th>
+                    <th class="heading">Points</th>
+                    <th class="heading forSizingOnly"></th>
+                </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td class="score sets"><span id="player1PreviousSets1"></span></td>
+                <td class="score sets"><span id="player1PreviousSets2"></span></td>
+                <td class="score sets"><span id="player1PreviousSets3"></span></td>
+                <td class="score sets"><span id="player1PreviousSets4"></span></td>
+                <td class="name">
                     <span id="player1Name"></span>
                     <img id="player1Serving" alt="tennis ball image to indicate this player is serving" src="Images/Tennis-Ball-icon.png" />
                 </td>
                 <td class="score sets"><span id="player1Sets"></span></td>
                 <td class="score games"><span id="player1Games"></span></td>
-				<td class="score points"><span id="player1Points"></span></td>
+                <td class="score points"><span id="player1Points"></span></td>
                 <td class="score forSizingOnly"><span>&nbsp;</span></td>
-			</tr>
-			<tr>
-				<td class="name">
+            </tr>
+            <tr>
+                <td class="score sets"><span id="player2PreviousSets1"></span></td>
+                <td class="score sets"><span id="player2PreviousSets2"></span></td>
+                <td class="score sets"><span id="player2PreviousSets3"></span></td>
+                <td class="score sets"><span id="player2PreviousSets4"></span></td>
+                <td class="name">
                     <span id="player2Name"></span>
                     <img id="player2Serving" alt="tennis ball image to indicate this player is serving" src="Images/Tennis-Ball-icon.png" />
                 </td>
                 <td class="score sets"><span id="player2Sets"></span></td>
                 <td class="score games"><span id="player2Games"></span></td>
-				<td class="score points"><span id="player2Points"></span></td>
+                <td class="score points"><span id="player2Points"></span></td>
                 <td class="score forSizingOnly"><span>&nbsp;</span></td>
-			</tr>
+            </tr>
+            </tbody>
 		</table>
 
         <br />
