More work on the new model classes

--- a/TennisKata.html
+++ b/TennisKata.html
@@ -12,6 +12,11 @@
 		<script type="text/javascript" src="Scripts/Controller.js"></script>
 		<script type="text/javascript" src="Scripts/Factory.js"></script>
 		<script type="text/javascript" src="Scripts/PresentationLayer.js"></script>
+        <script type="text/javascript" src="Scripts/Model/Point.js"></script>
+        <script type="text/javascript" src="Scripts/Model/Game.js"></script>
+        <script type="text/javascript" src="Scripts/Model/Set.js"></script>
+        <script type="text/javascript" src="Scripts/Model/Match.js"></script>
+        <script type="text/javascript" src="Scripts/Model/Utils.js"></script>
 	</head>
 
 	<body>
