--- a/Tests/JasmineSpecRunner.html
+++ b/Tests/JasmineSpecRunner.html
@@ -16,9 +16,15 @@
         <script src="../Scripts/ScoreSummaryFormatter.js" type="text/javascript"></script>
         <script src="../Scripts/Controller.js" type="text/javascript"></script>
         <script src="../Scripts/Factory.js" type="text/javascript"></script>
+        <script src="../Scripts/Model/Point.js" type="text/javascript"></script>
+        <script src="../Scripts/Model/Game.js" type="text/javascript"></script>
+        <script src="../Scripts/Model/Set.js" type="text/javascript"></script>
+        <script src="../Scripts/Model/Match.js" type="text/javascript"></script>
+        <script src="../Scripts/Model/Utils.js" type="text/javascript"></script>
 
         <!-- include spec files here... -->
         <script src="TennisKataSpec.js" type="text/javascript"></script>
+        <script src="ModelSpec.js" type="text/javascript"></script>
 
         <script type="text/javascript">
             (function () {
