We now populate the previous sets on the UI scoreboard

--- a/TennisKata.html
+++ b/TennisKata.html
@@ -61,10 +61,10 @@
             </thead>
             <tbody>
             <tr>
-                <td class="score sets"><span id="player1PreviousSets1"></span></td>
-                <td class="score sets"><span id="player1PreviousSets2"></span></td>
-                <td class="score sets"><span id="player1PreviousSets3"></span></td>
-                <td class="score sets"><span id="player1PreviousSets4"></span></td>
+                <td class="score sets"><span class="previousSets" id="player1PreviousSets1"></span></td>
+                <td class="score sets"><span class="previousSets" id="player1PreviousSets2"></span></td>
+                <td class="score sets"><span class="previousSets" id="player1PreviousSets3"></span></td>
+                <td class="score sets"><span class="previousSets" id="player1PreviousSets4"></span></td>
                 <td class="name">
                     <span id="player1Name"></span>
                     <img id="player1Serving" alt="tennis ball image to indicate this player is serving" src="Images/Tennis-Ball-icon.png" />
@@ -75,10 +75,10 @@
                 <td class="score forSizingOnly"><span>&nbsp;</span></td>
             </tr>
             <tr>
-                <td class="score sets"><span id="player2PreviousSets1"></span></td>
-                <td class="score sets"><span id="player2PreviousSets2"></span></td>
-                <td class="score sets"><span id="player2PreviousSets3"></span></td>
-                <td class="score sets"><span id="player2PreviousSets4"></span></td>
+                <td class="score sets"><span class="previousSets" id="player2PreviousSets1"></span></td>
+                <td class="score sets"><span class="previousSets" id="player2PreviousSets2"></span></td>
+                <td class="score sets"><span class="previousSets" id="player2PreviousSets3"></span></td>
+                <td class="score sets"><span class="previousSets" id="player2PreviousSets4"></span></td>
                 <td class="name">
                     <span id="player2Name"></span>
                     <img id="player2Serving" alt="tennis ball image to indicate this player is serving" src="Images/Tennis-Ball-icon.png" />
