Started work to implement score summary in terms of the new model classes

--- a/TennisKata.html
+++ b/TennisKata.html
@@ -17,6 +17,7 @@
         <script type="text/javascript" src="Scripts/Model/Set.js"></script>
         <script type="text/javascript" src="Scripts/Model/Match.js"></script>
         <script type="text/javascript" src="Scripts/Model/Utils.js"></script>
+        <script type="text/javascript" src="Scripts/Presentation/ScoreSummaryFormatter.js"></script>
 	</head>
 
 	<body>
