Starting to move the code that formats game points into the presentation layer

--- a/TennisKata.html
+++ b/TennisKata.html
@@ -16,6 +16,7 @@
         <script type="text/javascript" src="Scripts/Model/Match.js"></script>
         <script type="text/javascript" src="Scripts/Model/Utils.js"></script>
         <script type="text/javascript" src="Scripts/Presentation/ScoreSummaryFormatter.js"></script>
+        <script type="text/javascript" src="Scripts/Presentation/GamePointsFormatter.js"></script>
 	</head>
 
 	<body>
