--- a/Tests/JasmineSpecRunner.html
+++ b/Tests/JasmineSpecRunner.html
@@ -20,10 +20,13 @@
         <script src="../Scripts/Model/Match.js" type="text/javascript"></script>
         <script src="../Scripts/Model/Utils.js" type="text/javascript"></script>
         <script src="../Scripts/Presentation/ScoreSummaryFormatter.js" type="text/javascript"></script>
+        <script src="../Scripts/Presentation/GamePointsFormatter.js" type="text/javascript"></script>
 
         <!-- include spec files here... -->
         <script src="TennisKataSpec.js" type="text/javascript"></script>
         <script src="ModelSpec.js" type="text/javascript"></script>
+        <script src="ScoreSummaryFormatterSpec.js" type="text/javascript"></script>
+        <script src="GamePointsFormatterSpec.js" type="text/javascript"></script>
 
         <script type="text/javascript">
             (function () {
