Refactored some code into a new presentation class so that I can get some tests on it

--- a/TennisKata.html
+++ b/TennisKata.html
@@ -17,6 +17,7 @@
         <script type="text/javascript" src="Scripts/Model/Utils.js"></script>
         <script type="text/javascript" src="Scripts/Presentation/ScoreSummaryFormatter.js"></script>
         <script type="text/javascript" src="Scripts/Presentation/GamePointsFormatter.js"></script>
+        <script type="text/javascript" src="Scripts/Presentation/SetsGamesPointsFormatter.js"></script>
 	</head>
 
 	<body>
