--- a/Tests/JasmineSpecRunner.html
+++ b/Tests/JasmineSpecRunner.html
@@ -21,6 +21,7 @@
         <script src="../Scripts/Model/Utils.js" type="text/javascript"></script>
         <script src="../Scripts/Presentation/ScoreSummaryFormatter.js" type="text/javascript"></script>
         <script src="../Scripts/Presentation/GamePointsFormatter.js" type="text/javascript"></script>
+        <script src="../Scripts/Presentation/SetsGamesPointsFormatter.js" type="text/javascript"></script>
 
         <!-- include spec files here... -->
         <script src="TennisKataSpec.js" type="text/javascript"></script>
