--- a/Tests/JasmineSpecRunner.html
+++ b/Tests/JasmineSpecRunner.html
@@ -28,6 +28,7 @@
         <script src="ModelSpec.js" type="text/javascript"></script>
         <script src="ScoreSummaryFormatterSpec.js" type="text/javascript"></script>
         <script src="GamePointsFormatterSpec.js" type="text/javascript"></script>
+        <script src="SetsGamesPointsFormatterSpec.js" type="text/javascript"></script>
 
         <script type="text/javascript">
             (function () {
