--- a/Tests/JasmineSpecRunner.html
+++ b/Tests/JasmineSpecRunner.html
@@ -22,6 +22,7 @@
         <script src="../Scripts/Presentation/ScoreSummaryFormatter.js" type="text/javascript"></script>
         <script src="../Scripts/Presentation/GamePointsFormatter.js" type="text/javascript"></script>
         <script src="../Scripts/Presentation/SetsGamesPointsFormatter.js" type="text/javascript"></script>
+        <script src="../Scripts/Presentation/PreviousSetsFormatter.js" type="text/javascript"></script>
 
         <!-- include spec files here... -->
         <script src="TennisKataSpec.js" type="text/javascript"></script>
@@ -29,6 +30,7 @@
         <script src="ScoreSummaryFormatterSpec.js" type="text/javascript"></script>
         <script src="GamePointsFormatterSpec.js" type="text/javascript"></script>
         <script src="SetsGamesPointsFormatterSpec.js" type="text/javascript"></script>
+        <script src="PreviousSetsFormatterSpec.js" type="text/javascript"></script>
 
         <script type="text/javascript">
             (function () {
