--- a/Tests/JasmineSpecRunner.html
+++ b/Tests/JasmineSpecRunner.html
@@ -7,6 +7,8 @@
         <script src="jasmine-1.3.1/jasmine-html.js" type="text/javascript"></script>
         <link href="jasmine-1.3.1/jasmine.css" rel="stylesheet" type="text/css" />
         <script src="it_multiple.js" type="text/javascript"></script>
+        <!--<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.js"></script>-->
+        <!--<script src="jasmine-jquery/jasmine-jquery.js" type="text/javascript"></script>-->
 
         <!-- include source files here... -->
         <script src="../Scripts/Player.js" type="text/javascript"></script>
