--- a/TennisKata.html
+++ b/TennisKata.html
@@ -18,6 +18,7 @@
         <script type="text/javascript" src="Scripts/Presentation/GamePointsFormatter.js"></script>
         <script type="text/javascript" src="Scripts/Presentation/SetsGamesPointsFormatter.js"></script>
         <script type="text/javascript" src="Scripts/Presentation/PreviousSetsFormatter.js"></script>
+        <script type="text/javascript" src="Scripts/Monitors/NewBallsMonitor.js"></script>
 	</head>
 
 	<body>
