--- a/Tests/JasmineSpecRunner.html
+++ b/Tests/JasmineSpecRunner.html
@@ -24,6 +24,7 @@
         <script src="../Scripts/Presentation/GamePointsFormatter.js" type="text/javascript"></script>
         <script src="../Scripts/Presentation/SetsGamesPointsFormatter.js" type="text/javascript"></script>
         <script src="../Scripts/Presentation/PreviousSetsFormatter.js" type="text/javascript"></script>
+        <script src="../Scripts/Monitors/NewBallsMonitor.js" type="text/javascript"></script>
 
         <!-- include spec files here... -->
         <script src="TennisKataSpec.js" type="text/javascript"></script>
@@ -33,6 +34,7 @@
         <script src="SetsGamesPointsFormatterSpec.js" type="text/javascript"></script>
         <script src="PreviousSetsFormatterSpec.js" type="text/javascript"></script>
         <script src="UserInterfaceSpec.js" type="text/javascript"></script>
+        <script src="NewBallsMonitorSpec.js" type="text/javascript"></script>
 
         <script type="text/javascript">
             (function () {
