--- a/TennisKata.html
+++ b/TennisKata.html
@@ -19,6 +19,7 @@
         <script type="text/javascript" src="Scripts/Presentation/SetsGamesPointsFormatter.js"></script>
         <script type="text/javascript" src="Scripts/Presentation/PreviousSetsFormatter.js"></script>
         <script type="text/javascript" src="Scripts/Monitors/NewBallsMonitor.js"></script>
+        <script type="text/javascript" src="Scripts/Monitors/CurrentServerMonitor.js"></script>
 	</head>
 
 	<body>
