--- a/Tests/JasmineSpecRunner.html
+++ b/Tests/JasmineSpecRunner.html
@@ -25,6 +25,7 @@
         <script src="../Scripts/Presentation/SetsGamesPointsFormatter.js" type="text/javascript"></script>
         <script src="../Scripts/Presentation/PreviousSetsFormatter.js" type="text/javascript"></script>
         <script src="../Scripts/Monitors/NewBallsMonitor.js" type="text/javascript"></script>
+        <script src="../Scripts/Monitors/CurrentServerMonitor.js" type="text/javascript"></script>
 
         <!-- include spec files here... -->
         <script src="TennisKataSpec.js" type="text/javascript"></script>
@@ -35,6 +36,7 @@
         <script src="PreviousSetsFormatterSpec.js" type="text/javascript"></script>
         <script src="UserInterfaceSpec.js" type="text/javascript"></script>
         <script src="NewBallsMonitorSpec.js" type="text/javascript"></script>
+        <script src="CurrentServerMonitorSpec.js" type="text/javascript"></script>
 
         <script type="text/javascript">
             (function () {
