Added more monitor events (onNewPoint, onNewGame, onNewSet, init). Added a null monitor. Made tweaks to the current server monitor

--- a/Tests/JasmineSpecRunner.html
+++ b/Tests/JasmineSpecRunner.html
@@ -25,6 +25,7 @@
         <script src="../Scripts/Presentation/PreviousSetsFormatter.js" type="text/javascript"></script>
         <script src="../Scripts/Monitors/NewBallsMonitor.js" type="text/javascript"></script>
         <script src="../Scripts/Monitors/CurrentServerMonitor.js" type="text/javascript"></script>
+        <script src="../Scripts/Monitors/NullMonitor.js" type="text/javascript"></script>
 
         <!-- include spec files here... -->
         <script src="TennisKataSpec.js" type="text/javascript"></script>
