--- a/Tests/JasmineSpecRunner.html
+++ b/Tests/JasmineSpecRunner.html
@@ -29,15 +29,15 @@
         <script src="../Scripts/Monitors/NullMonitor.js" type="text/javascript"></script>
 
         <!-- include spec files here... -->
-        <script src="TennisKataSpec.js" type="text/javascript"></script>
-        <script src="ModelSpec.js" type="text/javascript"></script>
-        <script src="ScoreSummaryFormatterSpec.js" type="text/javascript"></script>
-        <script src="GamePointsFormatterSpec.js" type="text/javascript"></script>
-        <script src="SetsGamesPointsFormatterSpec.js" type="text/javascript"></script>
-        <script src="PreviousSetsFormatterSpec.js" type="text/javascript"></script>
+        <script src="ControllerSpec.js" type="text/javascript"></script>
+        <script src="Model/ModelSpec.js" type="text/javascript"></script>
+        <script src="Monitors/NewBallsMonitorSpec.js" type="text/javascript"></script>
+        <script src="Monitors/CurrentServerMonitorSpec.js" type="text/javascript"></script>
+        <script src="Presentation/ScoreSummaryFormatterSpec.js" type="text/javascript"></script>
+        <script src="Presentation/GamePointsFormatterSpec.js" type="text/javascript"></script>
+        <script src="Presentation/SetsGamesPointsFormatterSpec.js" type="text/javascript"></script>
+        <script src="Presentation/PreviousSetsFormatterSpec.js" type="text/javascript"></script>
         <script src="UserInterfaceSpec.js" type="text/javascript"></script>
-        <script src="NewBallsMonitorSpec.js" type="text/javascript"></script>
-        <script src="CurrentServerMonitorSpec.js" type="text/javascript"></script>
 
         <script type="text/javascript">
             (function () {
