Moved Player into Model and removed Factory

--- a/TennisKata.html
+++ b/TennisKata.html
@@ -3,23 +3,22 @@
 	<head>
 		<title>Tennis Kata</title>
 		<link rel="stylesheet" type="text/css" href="Styles/TennisKata.css">
-        <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.js"></script>
-		<script type="text/javascript" src="Scripts/Player.js"></script>
 		<script type="text/javascript" src="Scripts/Controller.js"></script>
-		<script type="text/javascript" src="Scripts/Factory.js"></script>
-		<script type="text/javascript" src="Scripts/PresentationLayer.js"></script>
+        <script type="text/javascript" src="Scripts/Model/Player.js"></script>
         <script type="text/javascript" src="Scripts/Model/Point.js"></script>
         <script type="text/javascript" src="Scripts/Model/Game.js"></script>
         <script type="text/javascript" src="Scripts/Model/Set.js"></script>
         <script type="text/javascript" src="Scripts/Model/Match.js"></script>
         <script type="text/javascript" src="Scripts/Model/Utils.js"></script>
+        <script type="text/javascript" src="Scripts/Monitors/CurrentServerMonitor.js"></script>
+        <script type="text/javascript" src="Scripts/Monitors/NewBallsMonitor.js"></script>
+        <script type="text/javascript" src="Scripts/Monitors/SignificantPointMonitor.js"></script>
         <script type="text/javascript" src="Scripts/Presentation/ScoreSummaryFormatter.js"></script>
         <script type="text/javascript" src="Scripts/Presentation/GamePointsFormatter.js"></script>
         <script type="text/javascript" src="Scripts/Presentation/SetsGamesPointsFormatter.js"></script>
         <script type="text/javascript" src="Scripts/Presentation/PreviousSetsFormatter.js"></script>
-        <script type="text/javascript" src="Scripts/Monitors/CurrentServerMonitor.js"></script>
-        <script type="text/javascript" src="Scripts/Monitors/NewBallsMonitor.js"></script>
-        <script type="text/javascript" src="Scripts/Monitors/SignificantPointMonitor.js"></script>
+        <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.js"></script>
+        <script type="text/javascript" src="Scripts/PresentationLayer.js"></script>
 	</head>
 
 	<body>
