--- a/Tests/JasmineSpecRunner.html
+++ b/Tests/JasmineSpecRunner.html
@@ -11,25 +11,25 @@
         <script src="jasmine-jquery/jasmine-jquery.js" type="text/javascript"></script>
 
         <!-- include source files here... -->
-        <script src="../Scripts/Player.js" type="text/javascript"></script>
         <script src="../Scripts/Controller.js" type="text/javascript"></script>
-        <script src="../Scripts/Factory.js" type="text/javascript"></script>
+        <script src="../Scripts/Model/Player.js" type="text/javascript"></script>
         <script src="../Scripts/Model/Point.js" type="text/javascript"></script>
         <script src="../Scripts/Model/Game.js" type="text/javascript"></script>
         <script src="../Scripts/Model/Set.js" type="text/javascript"></script>
         <script src="../Scripts/Model/Match.js" type="text/javascript"></script>
         <script src="../Scripts/Model/Utils.js" type="text/javascript"></script>
-        <script src="../Scripts/Presentation/ScoreSummaryFormatter.js" type="text/javascript"></script>
-        <script src="../Scripts/Presentation/GamePointsFormatter.js" type="text/javascript"></script>
-        <script src="../Scripts/Presentation/SetsGamesPointsFormatter.js" type="text/javascript"></script>
-        <script src="../Scripts/Presentation/PreviousSetsFormatter.js" type="text/javascript"></script>
         <script src="../Scripts/Monitors/CurrentServerMonitor.js" type="text/javascript"></script>
         <script src="../Scripts/Monitors/SignificantPointMonitor.js" type="text/javascript"></script>
         <script src="../Scripts/Monitors/NewBallsMonitor.js" type="text/javascript"></script>
         <script src="../Scripts/Monitors/NullMonitor.js" type="text/javascript"></script>
+        <script src="../Scripts/Presentation/ScoreSummaryFormatter.js" type="text/javascript"></script>
+        <script src="../Scripts/Presentation/GamePointsFormatter.js" type="text/javascript"></script>
+        <script src="../Scripts/Presentation/SetsGamesPointsFormatter.js" type="text/javascript"></script>
+        <script src="../Scripts/Presentation/PreviousSetsFormatter.js" type="text/javascript"></script>
 
         <!-- include spec files here... -->
         <script src="ControllerSpec.js" type="text/javascript"></script>
+        <script src="Model/PlayerSpec.js" type="text/javascript"></script>
         <script src="Model/ModelSpec.js" type="text/javascript"></script>
         <script src="Monitors/NewBallsMonitorSpec.js" type="text/javascript"></script>
         <script src="Monitors/CurrentServerMonitorSpec.js" type="text/javascript"></script>
