Split ModelSpec into separate files for each model class

--- a/Tests/JasmineSpecRunner.html
+++ b/Tests/JasmineSpecRunner.html
@@ -28,15 +28,17 @@
         <script src="../Scripts/Presentation/PreviousSetsFormatter.js" type="text/javascript"></script>
 
         <!-- include spec files here... -->
-        <script src="ControllerSpec.js" type="text/javascript"></script>
         <script src="Model/PlayerSpec.js" type="text/javascript"></script>
-        <script src="Model/ModelSpec.js" type="text/javascript"></script>
+        <script src="Model/GameSpec.js" type="text/javascript"></script>
+        <script src="Model/SetSpec.js" type="text/javascript"></script>
+        <script src="Model/MatchSpec.js" type="text/javascript"></script>
         <script src="Monitors/NewBallsMonitorSpec.js" type="text/javascript"></script>
         <script src="Monitors/CurrentServerMonitorSpec.js" type="text/javascript"></script>
-        <script src="Presentation/ScoreSummaryFormatterSpec.js" type="text/javascript"></script>
         <script src="Presentation/GamePointsFormatterSpec.js" type="text/javascript"></script>
         <script src="Presentation/SetsGamesPointsFormatterSpec.js" type="text/javascript"></script>
         <script src="Presentation/PreviousSetsFormatterSpec.js" type="text/javascript"></script>
+        <script src="Presentation/ScoreSummaryFormatterSpec.js" type="text/javascript"></script>
+        <script src="ControllerSpec.js" type="text/javascript"></script>
         <script src="UserInterfaceSpec.js" type="text/javascript"></script>
 
         <script type="text/javascript">
