Factored out PresentationLayer.js to help get a first user interface test working

--- a/TennisKata.html
+++ b/TennisKata.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Tennis Kata</title>
 		<link rel="stylesheet" type="text/css" href="Styles/TennisKata.css">
-		<script type="text/javascript" src="Scripts/Controller.js"></script>
+        <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.js"></script>
         <script type="text/javascript" src="Scripts/Model/Player.js"></script>
         <script type="text/javascript" src="Scripts/Model/Point.js"></script>
         <script type="text/javascript" src="Scripts/Model/Game.js"></script>
@@ -17,8 +17,9 @@
         <script type="text/javascript" src="Scripts/Presentation/GamePointsFormatter.js"></script>
         <script type="text/javascript" src="Scripts/Presentation/SetsGamesPointsFormatter.js"></script>
         <script type="text/javascript" src="Scripts/Presentation/PreviousSetsFormatter.js"></script>
-        <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.js"></script>
+        <script type="text/javascript" src="Scripts/Controller.js"></script>
         <script type="text/javascript" src="Scripts/PresentationLayer.js"></script>
+        <script type="text/javascript" src="Scripts/TennisKata.js"></script>
 	</head>
 
 	<body>
