Got the first few UI tests working

--- a/Tests/JasmineSpecRunner.html
+++ b/Tests/JasmineSpecRunner.html
@@ -11,7 +11,6 @@
         <script src="jasmine-jquery/jasmine-jquery.js" type="text/javascript"></script>
 
         <!-- include source files here... -->
-        <script src="../Scripts/Controller.js" type="text/javascript"></script>
         <script src="../Scripts/Model/Player.js" type="text/javascript"></script>
         <script src="../Scripts/Model/Point.js" type="text/javascript"></script>
         <script src="../Scripts/Model/Game.js" type="text/javascript"></script>
@@ -26,6 +25,8 @@
         <script src="../Scripts/Presentation/GamePointsFormatter.js" type="text/javascript"></script>
         <script src="../Scripts/Presentation/SetsGamesPointsFormatter.js" type="text/javascript"></script>
         <script src="../Scripts/Presentation/PreviousSetsFormatter.js" type="text/javascript"></script>
+        <script src="../Scripts/Controller.js" type="text/javascript"></script>
+        <script src="../Scripts/PresentationLayer.js" type="text/javascript"></script>
 
         <!-- include spec files here... -->
         <script src="Model/PlayerSpec.js" type="text/javascript"></script>
