--- a/Tests/JasmineSpecRunner.html
+++ b/Tests/JasmineSpecRunner.html
@@ -29,6 +29,7 @@
         <script src="../Scripts/PresentationLayer.js" type="text/javascript"></script>
 
         <!-- include spec files here... -->
+        <script src="Common/MatchUtils.js" type="text/javascript"></script>
         <script src="Model/PlayerSpec.js" type="text/javascript"></script>
         <script src="Model/GameSpec.js" type="text/javascript"></script>
         <script src="Model/SetSpec.js" type="text/javascript"></script>
