--- a/Tests/JasmineSpecRunner.html
+++ b/Tests/JasmineSpecRunner.html
@@ -30,6 +30,7 @@
 
         <!-- include spec files here... -->
         <script src="Common/MatchUtils.js" type="text/javascript"></script>
+        <script src="Common/ControllerUtils.js" type="text/javascript"></script>
         <script src="Model/PlayerSpec.js" type="text/javascript"></script>
         <script src="Model/GameSpec.js" type="text/javascript"></script>
         <script src="Model/SetSpec.js" type="text/javascript"></script>
