Added unit tests re SignificantPointMonitor

--- a/Tests/JasmineSpecRunner.html
+++ b/Tests/JasmineSpecRunner.html
@@ -37,6 +37,7 @@
         <script src="Model/MatchSpec.js" type="text/javascript"></script>
         <script src="Monitors/NewBallsMonitorSpec.js" type="text/javascript"></script>
         <script src="Monitors/CurrentServerMonitorSpec.js" type="text/javascript"></script>
+        <script src="Monitors/SignificantPointMonitorSpec.js" type="text/javascript"></script>
         <script src="Presentation/GamePointsFormatterSpec.js" type="text/javascript"></script>
         <script src="Presentation/SetsGamesPointsFormatterSpec.js" type="text/javascript"></script>
         <script src="Presentation/PreviousSetsFormatterSpec.js" type="text/javascript"></script>
